feat: Custom Pagination Dto 구현 및 적용 (#21)
* refactor: 기존 open api response dto rename 및 위치 이동

* refactor: open api auction response dto record로 변경

* feat: auction history response dto 구현

* chore: map struct 종속성 추가

* feat: auction history map struct 구현 및 적용

* refactor: repository, service 패키지 변경

* feat: 공통 페이지네이션 PageRequestDto 구현

* feat: 공통 페이지네이션 PageResponseDto 구현

* feat: 페이지네이션 swagger dto schema 추가

* feat: 페이지네이션 dto 서비스, 컨트롤러 적용

* fix: page meta 생성 시 page num + 1 설정

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* chore: api response debug log 추가

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>